--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: item-service
+  cloud:
+    config:
+      override-none: true
+    
 
 # 启动参数 --server.port 可以覆盖yml配置
 server:
