--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -4,7 +4,11 @@ spring:
   cloud:
     config:
       override-none: true
-    
+  rabbitmq:
+    host: 106.52.33.51
+    port: 5672
+    username: admin
+    password: admin    
 
 # 启动参数 --server.port 可以覆盖yml配置
 server:
