--- a/config/order-service-dev.yml
+++ b/config/order-service-dev.yml
@@ -3,7 +3,12 @@ spring:
     name: order-service
   cloud:
     config:
-      override-none: true    
+      override-none: true
+  rabbitmq:
+    host: 106.52.33.51
+    port: 5672
+    username: admin
+    password: admin    
 server:
   port: 8201  
   
